# githubfetch

./: Cargo.toml  Makefile  README.md  install.sh
docs/: CONTRIBUTING.md  INSTALLATION.md
src/: main.rs
