[package]
name = "githubfetch"
version = "1.0.0"
authors = ["Sergey Desyatkov <sergeidesyatkov@gmail.com>"]
edition = "2024"
description = "Fetch GitHub profile info by username"
repository = "https://github.com/desyatkoff/githubfetch"
license = "GPL-3.0-or-later"

[dependencies]
colored = "3.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
